Fix overlap of tab focus button in Sources
Slightly increasing the line-height.

Before: https://imgur.com/jRVnYwd
After: https://i.imgur.com/hQaIlkl.png
Fixed: 393573238
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6225719
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/ui/legacy/tabbedPane.css
+++ b/front_end/ui/legacy/tabbedPane.css
@@ -60,6 +60,7 @@
   margin: 0 var(--sys-size-8);
 
   &.workspace {
+    line-height: 18px;
     display: inline-flex;
     align-items: center;
     border: var(--sys-size-2) dashed var(--sys-color-divider);
